# agentarea

./: .bumpversion.cfg  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.dev.yaml  docker-compose.yaml  makefile
agentarea-bootstrap/: Dockerfile  README.md  main.py  pyproject.toml  test_db_setup.py
agentarea-bootstrap/code/: __init__.py  database_setup.py  infisical_setup.py  minio_setup.py  populate_mcp_providers.py  populate_providers_new_arch.py
agentarea-bootstrap/data/: infisical_config.json  mcp_providers.yaml  providers.yaml
agentarea-bootstrap/scripts/: generate_provider_uuid.py
agentarea-platform/: .dockerignore  .env.example  .gitignore  .pre-commit  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup_test_database.sql
agentarea-platform/apps/api/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
agentarea-platform/apps/api/agentarea_api/: __init__.py  cli.py  config.py  main.py  startup.py
agentarea-platform/apps/api/alembic/: env.py
agentarea-platform/apps/api/tests/: test_triggers_api.py  test_triggers_api_simple.py  test_webhooks.py
agentarea-platform/apps/worker/: Dockerfile  docker-entrypoint.sh
agentarea-platform/apps/worker/agentarea_worker/: __init__.py  cli.py  main.py
agentarea-platform/docs/: A2A_INTEGRATION_GUIDE.md  ADK_WORKFLOW_TEST_SUMMARY.md  CLI_USAGE.md  SYSTEM_ARCHITECTURE.md  agent-chat-implementation-plan.md  agent-protocol-implementation-plan.md  api_compatibility_verification.md  auth_context_dependency.md
agentarea-platform/libs/agentarea-agents-sdk/: README.md  pytest.ini  test.sh
agentarea-platform/libs/agentarea-agents-sdk/agentarea_agents_sdk/: __init__.py  example.py  prompts.py
agentarea-platform/libs/agentarea-agents-sdk/tests/: __init__.py  conftest.py  test_agent.py  test_components.py  test_context_service.py  test_integration.py  test_task_orchestration.py  test_tool_calling.py
agentarea-platform/libs/agents/agentarea_agents/: __init__.py
agentarea-platform/libs/common/: pyproject.toml
agentarea-platform/libs/common/agentarea_common/: __init__.py
agentarea-platform/libs/common/tests/: __init__.py  conftest.py  test_workspace_error_integration.py  test_workspace_exceptions.py
agentarea-platform/libs/context/: README.md  pyproject.toml  pytest.ini
agentarea-platform/libs/context/agentarea_context/: __init__.py
agentarea-platform/libs/context/tests/: test_context_service.py
agentarea-platform/libs/execution/: README.md  pyproject.toml
agentarea-platform/libs/execution/agentarea_execution/: __init__.py  models.py
agentarea-platform/libs/execution/tests/: conftest.py
agentarea-platform/libs/llm/agentarea_llm/: __init__.py
agentarea-platform/libs/mcp/agentarea_mcp/: README.md  __init__.py  container_monitor.py  events.py  schemas.py
agentarea-platform/libs/secrets/: pyproject.toml
agentarea-platform/libs/secrets/agentarea_secrets/: __init__.py  infisical_secret_manager.py  secret_manager_factory.py
agentarea-platform/libs/secrets/tests/: __init__.py  conftest.py  test_database_secret_manager.py  test_secret_manager_factory.py  test_secret_manager_factory_class.py
agentarea-platform/libs/tasks/agentarea_tasks/: __init__.py  task_manager.py  task_service.py  temporal_task_manager.py
agentarea-platform/libs/triggers/agentarea_triggers/: __init__.py  health_checks.py  llm_condition_evaluator.py  logging_utils.py  service_locator.py  trigger_service.py  webhook_manager.py
agentarea-platform/libs/triggers/tests/: __init__.py  test_error_handling.py  test_error_integration.py  test_llm_condition_evaluator.py  test_temporal_schedule_manager.py  test_trigger_execution_engine.py  test_trigger_execution_integration.py  test_trigger_safety_mechanisms.py  test_trigger_service.py  test_trigger_service_llm_integration.py  test_webhook_manager.py
agentarea-platform/scripts/: diagnose_production_llm.py  diagnose_workflow.py  test_production_fix.py  test_real_workflow.py
agentarea-platform/temporal-config/: development-sql.yaml
agentarea-platform/tests/: README.md  __init__.py  conftest.py  run_adk_workflow_tests.py  run_trigger_integration_tests.py
agentarea-platform/tests/functional/: test_auth_functional.py
agentarea-platform/tests/integration/: README.md  README_LLM_TESTS.md  README_MCP.md  README_TRIGGER_TESTS.md  __init__.py  run_a2a_integration_tests.py  test_a2a_agent_discovery.py  test_a2a_agent_discovery_integration.py  test_a2a_real_api.py  test_a2a_real_integration.py  test_a2a_task_execution_comprehensive.py  test_a2a_task_management.py  test_a2a_working.py  test_agent_mcp_e2e.py  test_api_compatibility.py  test_cli_workflow_sse_integration.py  test_container_monitoring.py  test_context_embeddings.py  test_cross_workspace_access_prevention.py  test_e2e_main_flow.py  test_event_broker_integration.py  test_full_workflow_with_real_llm.py  test_functional_api.py  test_llm_response_parser.py  test_malformed_llm_responses.py  test_mcp_real_integration.py  test_presigned_url.py  test_protocol_endpoints.py  test_provider_population.py  test_react_framework_behavior.py  test_real_completion_tool.py  test_real_llm_simple.py  test_real_llm_tool_calls.py  test_real_llm_with_mocked_db.py  test_real_workflow_infrastructure.py  test_real_workflow_with_mocked_db.py  test_sdk_temporal_integration.py  test_service_compatibility.py  test_sse_end_to_end.py  test_sse_integration.py  (+23 more)
agentarea-platform/tests/unit/: test_a2a_logging.py  test_auth_middleware.py  test_auth_test_utils.py  test_basic_functionality.py  test_jwt_token_extraction_comprehensive.py  test_kratos_provider.py  test_task_event_service.py  test_utils.py  test_workspace_error_handling.py  test_workspace_scoped_repository_comprehensive.py
core/apps/api/: pyproject.toml
core/apps/worker/: pyproject.toml
core/libs/agentarea-agents-sdk/: pyproject.toml
core/libs/agents/: pyproject.toml
core/libs/execution/: pyproject.toml
core/libs/llm/: pyproject.toml
core/libs/mcp/: pyproject.toml
core/libs/tasks/: pyproject.toml
core/libs/triggers/: pyproject.toml
(+780 files in other folders)
