[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentarea-api"
version = "0.0.1"
description = "AgentArea API application"
license = {text = "EPL-2.0"}
requires-python = ">=3.12"
dependencies = [
    "agentarea-common",
    "agentarea-agents",
    "agentarea-execution",
    "agentarea-llm",
    "agentarea-mcp",
    "agentarea-tasks",
    "agentarea-secrets",
    "agentarea-triggers",
    "alembic>=1.15.2",
    "uvicorn>=0.34.0",
    "fastapi>=0.104.0",
    "mcp[cli]>=1.9.2",
    "python-multipart>=0.0.6",
    "click>=8.1.8",
    "pyjwt>=2.8.0",
    "fastmcp>=2.11.0",
]

[tool.uv.sources]
agentarea-common = { workspace = true }
agentarea-agents = { workspace = true }
agentarea-execution = { workspace = true }
agentarea-llm = { workspace = true }
agentarea-mcp = { workspace = true }
agentarea-tasks = { workspace = true }
agentarea-secrets = { workspace = true }
agentarea-triggers = { workspace = true }

[project.scripts]
agentarea-api = "agentarea_api.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["agentarea_api"]
