[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentarea-common"
version = "0.0.1"
description = "Common utilities and infrastructure for AgentArea"
license = {text = "EPL-2.0"}
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "returns>=0.25.0",
    "infisicalsdk>=1.0.8",
    "temporalio>=1.12.0",
    "faststream[kafka,redis]>=0.5.42",
    "boto3>=1.34.0",
    "botocore>=1.36.16",
]

[tool.hatch.build.targets.wheel]
packages = ["agentarea_common"] 