[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentarea-secrets"
version = "0.0.1"
description = "Secret management functionality for AgentArea"
license = {text = "EPL-2.0"}
requires-python = ">=3.12"
dependencies = [
    "agentarea-common",
    "infisicalsdk>=1.0.8",
    "pydantic>=2.4.2",
]

[tool.uv.sources]
agentarea-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["agentarea_secrets"] 