[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentarea-api"
version = "0.0.1"
description = "AgentArea API application"
license = {text = "EPL-2.0"}
requires-python = ">=3.12"
dependencies = [
    "agentarea-common",
    "agentarea-agents",
    "agentarea-execution",
    "agentarea-llm",
    "agentarea-mcp",
    "agentarea-tasks",
    "agentarea-secrets",
    "agentarea-triggers",
    "a2a-sdk>=0.2.8",
    "alembic>=1.15.2",
    "uvicorn>=0.34.0",
    "fastapi>=0.104.0",
    "mcp[cli]>=1.9.2",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "boto3>=1.34.0",
    "botocore>=1.36.16",
    "click>=8.1.8",
    "greenlet>=3.1.1",
    "google-adk>=1.1.1",
    "faststream[kafka,redis]>=0.5.42",
    "pytz>=2025.2",
    "pyjwt>=2.8.0",
    "fastmcp>=2.11.0",
]

[tool.uv.sources]
agentarea-common = { workspace = true }
agentarea-agents = { workspace = true }
agentarea-execution = { workspace = true }
agentarea-llm = { workspace = true }
agentarea-mcp = { workspace = true }
agentarea-tasks = { workspace = true }
agentarea-secrets = { workspace = true }
agentarea-triggers = { workspace = true }

[project.scripts]
agentarea-api = "agentarea_api.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agentarea_api"]
