[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentarea-agents-sdk"
version = "0.0.1"
description = "Independent Agent SDK for AgentArea - agentic AI components"
license = {text = "EPL-2.0"}
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.74.15",
    "pydantic>=2.4.2",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[project.scripts]
test-agents-sdk = "run_tests:main"

[tool.hatch.build.targets.wheel]
packages = ["agentarea_agents_sdk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]  # Line too long

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true