[project]
name = "agentarea-execution"
version = "0.0.1"
description = "AgentArea execution library"
license = {text = "EPL-2.0"}
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.0.0",
    "pydantic>=2.0.0",
    "agentarea-agents-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentarea_execution"] 