[project]
name = "agentarea-worker"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "faststream[redis]>=0.5.42",
    "agentarea-common",
    "agentarea-tasks"
]


[tool.uv.sources]
agentarea-common = { workspace = true }
agentarea-tasks = { workspace = true }